.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:26:46 **** Incremental Build of configuration Debug for project libreriaSigniorCodigo ****
make all 
Building file: ../libreriaCPU.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"libreriaCPU.d" -MT"libreriaCPU.d" -o "libreriaCPU.o" "../libreriaCPU.c"
Finished building: ../libreriaCPU.c
 
Building target: liblibreriaSigniorCodigo.so
Invoking: GCC C Linker
gcc -L/home/utnso/so-commons-library/src/build -shared -o "liblibreriaSigniorCodigo.so"  ./libSockets.o ./libreriaCPU.o ./planificadorFunctions.o ./swapFunctions.o   -lcommons
Finished building target: liblibreriaSigniorCodigo.so
 
09:33:09 **** Incremental Build of configuration Debug for project libreriaSigniorCodigo ****
make all 
Building file: ../libreriaCPU.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"libreriaCPU.d" -MT"libreriaCPU.d" -o "libreriaCPU.o" "../libreriaCPU.c"
Finished building: ../libreriaCPU.c
 
Building target: liblibreriaSigniorCodigo.so
Invoking: GCC C Linker
gcc -L/home/utnso/so-commons-library/src/build -shared -o "liblibreriaSigniorCodigo.so"  ./libSockets.o ./libreriaCPU.o ./planificadorFunctions.o ./swapFunctions.o   -lcommons
Finished building target: liblibreriaSigniorCodigo.so
 
09:33:09 **** Incremental Build of configuration Debug for project cpu ****
make all 
Building file: ../cpu.c
Invoking: GCC C Compiler
gcc -I"/home/utnso/git/tp-2015-2c-signiorcodigo/libreriaSigniorCodigo" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"cpu.d" -MT"cpu.d" -o "cpu.o" "../cpu.c"
Finished building: ../cpu.c
 
Building target: cpu
Invoking: GCC C Linker
gcc -L"/home/utnso/git/tp-2015-2c-signiorcodigo/libreriaSigniorCodigo/Debug" -L/home/utnso/git/tp-2015-2c-signiorcodigo/so-commons-library/src/commons/build -o "cpu"  ./cpu.o   -llibreriaSigniorCodigo -lpthread -lcommons
Finished building target: cpu
 
09:33:09 **** Incremental Build of configuration Debug for project memoria ****
make all 
Building target: memoria
Invoking: GCC C Linker
gcc -L"/home/utnso/git/tp-2015-2c-signiorcodigo/libreriaSigniorCodigo/Debug" -L/home/utnso/git/tp-2015-2c-signiorcodigo/so-commons-library/src/commons/build -o "memoria"  ./memoria.o   -llibreriaSigniorCodigo -lcommons
Finished building target: memoria
 
09:33:10 **** Incremental Build of configuration Debug for project planificador ****
make all 
Building file: ../planificador.c
Invoking: GCC C Compiler
gcc -I"/home/utnso/git/tp-2015-2c-signiorcodigo/libreriaSigniorCodigo" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"planificador.d" -MT"planificador.d" -o "planificador.o" "../planificador.c"
../planificador.c: In function ‘main’:
../planificador.c:56:1: error: expected expression before ‘<<’ token
 <<<<<<< HEAD
 ^
../planificador.c:230:1: error: expected declaration or statement at end of input
 }
 ^
../planificador.c:55:6: warning: unused variable ‘enviar’ [-Wunused-variable]
  int enviar = 1;
      ^
../planificador.c:54:7: warning: unused variable ‘pid_a_finalizar’ [-Wunused-variable]
  int *pid_a_finalizar = malloc(sizeof(int));
       ^
../planificador.c:53:7: warning: unused variable ‘proceso’ [-Wunused-variable]
  char proceso[PACKAGESIZE];
       ^
../planificador.c:50:6: warning: variable ‘socketCliente’ set but not used [-Wunused-but-set-variable]
  int socketCliente;
      ^
../planificador.c:41:10: warning: variable ‘en_ejecucion’ set but not used [-Wunused-but-set-variable]
  t_list *en_ejecucion;
          ^
../planificador.c:39:11: warning: variable ‘colaListos’ set but not used [-Wunused-but-set-variable]
  t_queue *colaListos;
           ^
../planificador.c:34:9: warning: unused variable ‘log_planificador’ [-Wunused-variable]
  t_log* log_planificador = log_create("log_planificador", "PLANIFICADOR",
         ^
../planificador.c:230:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [planificador.o] Error 1
09:33:10 **** Incremental Build of configuration Debug for project swap ****
make all 
Building target: swap
Invoking: GCC C Linker
gcc -L"/home/utnso/git/tp-2015-2c-signiorcodigo/libreriaSigniorCodigo/Debug" -L/home/utnso/git/tp-2015-2c-signiorcodigo/so-commons-library/src/commons -o "swap"  ./swap.o   -llibreriaSigniorCodigo -lcommons
Finished building target: swap
 
09:37:55 **** Incremental Build of configuration Debug for project libreriaSigniorCodigo ****
make all 
make: No se hace nada para «all».
09:37:55 **** Incremental Build of configuration Debug for project cpu ****
make all 
make: No se hace nada para «all».
09:37:55 **** Incremental Build of configuration Debug for project memoria ****
make all 
make: No se hace nada para «all».
09:37:56 **** Incremental Build of configuration Debug for project planificador ****
make all 
Building file: ../planificador.c
Invoking: GCC C Compiler
gcc -I"/home/utnso/git/tp-2015-2c-signiorcodigo/libreriaSigniorCodigo" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"planificador.d" -MT"planificador.d" -o "planificador.o" "../planificador.c"
Finished building: ../planificador.c
 
Building target: planificador
Invoking: GCC C Linker
gcc -L"/home/utnso/git/tp-2015-2c-signiorcodigo/libreriaSigniorCodigo/Debug" -L/home/utnso/git/tp-2015-2c-signiorcodigo/so-commons-library/src/commons/build -o "planificador"  ./planificador.o   -llibreriaSigniorCodigo -lcommons
Finished building target: planificador
 
09:37:56 **** Incremental Build of configuration Debug for project swap ****
make all 
make: No se hace nada para «all».
09:59:55 **** Incremental Build of configuration Debug for project libreriaSigniorCodigo ****
make all 
Building file: ../libreriaCPU.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"libreriaCPU.d" -MT"libreriaCPU.d" -o "libreriaCPU.o" "../libreriaCPU.c"
Finished building: ../libreriaCPU.c
 
Building target: liblibreriaSigniorCodigo.so
Invoking: GCC C Linker
gcc -L/home/utnso/so-commons-library/src/build -shared -o "liblibreriaSigniorCodigo.so"  ./libSockets.o ./libreriaCPU.o ./planificadorFunctions.o ./swapFunctions.o   -lcommons
Finished building target: liblibreriaSigniorCodigo.so
 
09:59:55 **** Incremental Build of configuration Debug for project cpu ****
make all 
Building target: cpu
Invoking: GCC C Linker
gcc -L"/home/utnso/git/tp-2015-2c-signiorcodigo/libreriaSigniorCodigo/Debug" -L/home/utnso/git/tp-2015-2c-signiorcodigo/so-commons-library/src/commons/build -o "cpu"  ./cpu.o   -llibreriaSigniorCodigo -lpthread -lcommons
Finished building target: cpu
 
09:59:56 **** Incremental Build of configuration Debug for project memoria ****
make all 
Building target: memoria
Invoking: GCC C Linker
gcc -L"/home/utnso/git/tp-2015-2c-signiorcodigo/libreriaSigniorCodigo/Debug" -L/home/utnso/git/tp-2015-2c-signiorcodigo/so-commons-library/src/commons/build -o "memoria"  ./memoria.o   -llibreriaSigniorCodigo -lcommons
Finished building target: memoria
 
09:59:56 **** Incremental Build of configuration Debug for project planificador ****
make all 
Building target: planificador
Invoking: GCC C Linker
gcc -L"/home/utnso/git/tp-2015-2c-signiorcodigo/libreriaSigniorCodigo/Debug" -L/home/utnso/git/tp-2015-2c-signiorcodigo/so-commons-library/src/commons/build -o "planificador"  ./planificador.o   -llibreriaSigniorCodigo -lcommons
Finished building target: planificador
 
09:59:56 **** Incremental Build of configuration Debug for project swap ****
make all 
Building target: swap
Invoking: GCC C Linker
gcc -L"/home/utnso/git/tp-2015-2c-signiorcodigo/libreriaSigniorCodigo/Debug" -L/home/utnso/git/tp-2015-2c-signiorcodigo/so-commons-library/src/commons -o "swap"  ./swap.o   -llibreriaSigniorCodigo -lcommons
Finished building target: swap
 
